--- a/client/theme.scss
+++ b/client/theme.scss
@@ -1,9 +1,9 @@
 
 /* Variables */
 $black: #151515;
-$blue: rgba(41, 77, 234, 1);
-$blue-dark: #595ff5;
-$blue-light: #2ba2f8;
+$blue: #3e0024;
+$blue-dark: #2b001e;
+$blue-light: #480027;
 $gray: #adadad;
 $gray-dark: #354052;
 $gray-light: #e8e8e8;
@@ -16,8 +16,8 @@ $white-light: rgba(255,255,255,.5);
 $margin: 1rem;
 $margin-lg: 1.5rem;
 
-$menu-gradient-main: #295af5;
-$menu-gradient-secondary: #595ff5;
+$menu-gradient-main: #2b001e;
+$menu-gradient-secondary: #480027;
 $menu-width-open: 220px;
 $menu-width-close: 110px;
 $menu-mobile-height: 70px;
